--- a/config/database.yml
+++ b/config/database.yml
@@ -15,7 +15,7 @@
 # gem 'pg'
 #
 default: &default
-  adapter: sqlite3
+  adapter: PostgreSQL
   timeout:  5000
   pool: 5
   # For details on connection pooling, see rails configuration guide
